# the-roost-api

./: Cargo.toml  LICENSE
config/: default.toml
src/: chat_completions.rs  completions.rs  config.rs  main.rs
