[package]
name = "the_roost"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
config = "0.13"
serde = { version = "1.0.21", features = ["derive"] }
serde_json = "1.0.101"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
bytes = "1.0"